--- a/style.css
+++ b/style.css
@@ -4,14 +4,6 @@ body {
     padding: 20px;
     background: #f4f4f4;
 }
-.modal {
-    background: white;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
-    display: inline-block;
-    margin-top: 20px;
-}
 img {
     max-width: 300px;
     border-radius: 8px;
@@ -23,12 +15,43 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background: #4CAF50;
+    background: #0032b2;
     color: white;
 }
 button:hover {
-    background: #45a049;
+    background: #002174;
 }
 .fechar {
-    background: #e74c3c;
+    background: #710b00;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 1rem;
+    text-align: center; /* centraliza imagem e botões */
+    border-radius: 8px;
+}
+  
+.modal-content img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1rem auto; /* espaço em cima e embaixo */
+}
+  
+.modal-content button {
+    margin: 0.25rem;
+}
+  
